; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_arc_opcode_supported.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arc/gnu/extr_arc-opc.c_arc_opcode_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.arc_opcode = type { i32 }

@cpu_type = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arc_opcode_supported(%struct.arc_opcode* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.arc_opcode*, align 8
  store %struct.arc_opcode* %0, %struct.arc_opcode** %3, align 8
  %4 = load %struct.arc_opcode*, %struct.arc_opcode** %3, align 8
  %5 = getelementptr inbounds %struct.arc_opcode, %struct.arc_opcode* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @ARC_OPCODE_CPU(i32 %6)
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %21

10:                                               ; preds = %1
  %11 = load %struct.arc_opcode*, %struct.arc_opcode** %3, align 8
  %12 = getelementptr inbounds %struct.arc_opcode, %struct.arc_opcode* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ARC_OPCODE_CPU(i32 %13)
  %15 = load i32, i32* @cpu_type, align 4
  %16 = call i32 @ARC_HAVE_CPU(i32 %15)
  %17 = and i32 %14, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %21

20:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %19, %9
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @ARC_OPCODE_CPU(i32) #1

declare dso_local i32 @ARC_HAVE_CPU(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
